# torfmm

./: README.md  pyproject.toml
.github/workflows/: python_ci.yml
src/fmm_torch/: __init__.py  eig.py
tests/: test_eig.py
